Changed some elements to the openAPi spec for films in line with the teaching modules.
Various small adjustments.
Removed a stray pdb import
